syntax = "proto3";

package rivet.backend.pkg.linode.server_destroy;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
    rivet.common.Uuid server_id = 1;
    optional string api_token = 2;
}

message Response {
}
